# Nebulua

./: .gitignore  .gitmodules  App.cs  Bag.cs  BarBar.cs  CMakeLists.txt  ChannelControl.cs  Cli.cs  CmdProc.cs  CommandProc.cs  Common.cs  Config.cs  Core.cs  HostCore.cs  LuaInterop.cs  LuaInterop_Work.cs  Main.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Midi.cs  MusicTime.cs  Nebulua.csproj  Nebulua.sln  Program.cs  README.md  Script.cs  Section.cs  Sequence.cs  State.cs  TimeBar.cs  UserSettings.cs  api_spec.lua  build.cmd  build.lua  build_test.cmd  builder.lua  example.lua  gen.cs  gen_interop.cmd  (+7 more)
App/: App.csproj  Cli.cs  Cli.csproj  Common.cs  Core.cs  DropDownButton.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Midi.cs  MusicTime.cs  Program.cs  State.cs  TimeBar.cs  UserSettings.cs
App/Properties/: Resources.Designer.cs  Resources.resx
CliApp/: App.cs  CliApp.csproj  CommandProc.cs  Program.cs
Common/: Common.cs  Common.csproj  Config.cs  Core.cs  Midi.cs  State.cs  UserSettings.cs
Examples/: airport.lua  example.lua  scale.lua
Interop/: Interop.cpp  Interop.h  Interop.vcxproj  gen_interop.cmd  interop_spec.lua  luainterop.c  luainterop.h
KeraLuaEx/: DelegateExtensions.cs  Delegates.cs  Exceptions.cs  KeraLuaEx.csproj  KeraLuaEx.sln  Lua.cs  LuaCompare.cs  LuaDebug.cs  LuaEx.cs  LuaGC.cs  LuaHookEvent.cs  LuaHookMask.cs  LuaOperation.cs  LuaRegister.cs  LuaRegistry.cs  LuaStatus.cs  LuaType.cs  NativeMethods.cs  README.md  Table.cs  Utils.cs
KeraLuaEx/Test/: KeraLuaExTest.csproj  LuaExTests.cs  Program.cs  RegressionTests.cs  Test.csproj  TestCases.cs
KeraLuaEx/lualib/: json.md
Properties/: Resources.Designer.cs  Resources.resx
Script/: Interop.cpp  Interop.h  Script.vcxproj  gen_interop.cmd  interop_spec.lua  luainterop.c  luainterop.h
ScriptLua/: ScriptApi.cs  ScriptLua.csproj  Section.cs  Sequence.cs
ScriptLua/Test/: Program.cs  ScriptLuaTest.csproj  TestCases.cs
Test/: Mock.cs  MockNAudio.cs  MockNebulua.cs  Program.cs  Test.csproj  Test.sln  TestCli.cs  TestCore.cs  TestInterop.cs  TestMisc.cs  TestScript.cs  Utils.cs  script_happy.lua  script_min.lua  test_api.lua  test_bar_time.lua  test_dev.lua
Test/lua/: luainterop.lua  run_lua_test.cmd  script_happy.lua  script_min.lua  test_api.lua  test_bar_time.lua  test_defs.lua  test_dev.lua  test_music_time.lua
UiApp/: BingBongJr.cs  CliInput.cs  ClickClack.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  TimeBar.cs  UiApp.csproj
UiApp/Properties/: Resources.Designer.cs  Resources.resx
app/: Nebulua.cpp  Nebulua.vcxproj  Nebulua.vcxproj.filters  cli.c  cli.h  devmgr.c  devmgr.h  exec.c  luainterop.c  luainterop.h  luainteropwork.c  nebcommon.c  nebcommon.h  scriptinfo.c  scriptinfo.h
app/test/: NebuluaTest.cpp  NebuluaTest.vcxproj  NebuluaTest.vcxproj.filters
build_app/: Nebulua.cpp  Nebulua.sln  Nebulua.vcxproj  Nebulua.vcxproj.filters
build_mingw/: CMakeLists.txt  build.cmd  build_test.cmd  test.cmd
build_test/: Nebulua.sln  Nebulua.vcxproj  Nebulua.vcxproj.filters  NebuluaTest.cpp  NebuluaTest.sln  NebuluaTest.vcxproj  NebuluaTest.vcxproj.filters
c/: CMakeLists.txt  _midi_interop.c  build.cmd  cli.c  cli.h  common.c  common.h  devmgr.c  devmgr.h  logger.c  logger.h  luainterop.c  luainterop.h  luainteropwork.c  luainteropwork.h  main.c  midi.h  midi_interop.c  nebcommon.h  settings.cs
c/private/: cli.c  common.c  devmgr.c  logger.c  luainterop.c  luainteropwork.c  nebcommon.c
c/test/: CMakeLists.txt  build.cmd  main.cpp  run.cmd  test_cli.cpp
docs/: definitions.md  midi_defs.md  music_defs.md  tech_notes.md  writing_scripts.md
examples/: airport.lua  daw_host.lua  dev.lua  ex2.lua  example.lua  exp_defs.ini  nebulua_config.ini  other.lua  piece1.lua
host/: LuaInterop.cs  MainForm.Designer.cs  Nebulua.sln  Program.cs  Script.cs  Script_all.cs
host/Examples/: airport.lua  example.lua
interop/: Api.cpp  Api.h  AppInterop.cpp  AppInterop.h  AssemblyInfo.cpp  Interop.vcxproj  Interop.vcxproj.filters  interop_spec.lua  luaex.h  luainterop.c  luainterop.h  luainteropwork.cpp  luautils.c  nebcommon.cpp  nebcommon.h
lbot/: debugger.lua  pnut_runner.lua  stringex.lua  template.lua  utils.lua
lbot/source_code/: luaex.c  (+1 more)
lib/: Ephemera.MidiLib.xml  Ephemera.NBagOfTricks.xml  Ephemera.NBagOfUis.xml  Ephemera.WinConsole.xml
lua/: bar_time.lua  debugger.lua  defs_api.lua  gen_md.lua  internal.lua  lbot_utils.lua  logger.lua  midi_defs.lua  midi_defs.md  music_api.lua  music_defs.lua  music_defs.md  music_time.lua  neb_api_sim_not.lua  neb_common.lua  nebulua.lua  script_api.lua  step_info.lua  step_types.lua  stringex.lua  utils.lua  validators.lua
lua_code/: bar_time.lua  gen_md.lua  internal.lua  midi_defs.lua  music_defs.lua  neb_common.lua  nebulua.lua  step_types.lua
lualib/: app_defs.lua  logger.lua  midi_defs.lua  mididefs.lua  music_defs.lua  nebulua.lua
mingw/: CMakeLists.txt  main.c  main.cpp  make_app.cmd  run_test.cmd
source/: cli.c  cli.h  devmgr.c  devmgr.h  exec.c  luaex.c  luaex.h  luainterop.c  luainteropwork.c  luainteropwork.h  main.c  midi.h  nebcommon.c  nebcommon.h
source_code/: devmgr.c  exec.c  luaex.c  luainterop.c  luainterop.h  luainteropwork.c  luainteropwork.h  nebcommon.c  nebcommon.h
test/: AppMole.cs  CliEmu.cs  Helpers.cs  InteropEmu.cs  MockCli.cs  MockIO.cs  MockInterop.cs  NebuluaTest.cpp  NebuluaTest.sln  NebuluaTest.vcxproj  NebuluaTest.vcxproj.filters  Program.cs  Test.csproj  Test.sln  TestApp.csproj  TestCli.csproj  TestHelpers.cs  TestInterop.csproj  TestMisc.csproj  TestUtils.cs  api_sim.lua  host_api.lua  main.cpp  run_all.cmd  run_lua_test.cmd  script1.lua  script_happy.lua  test_api.cs  test_app.cs  test_bar_time.lua  test_cli.cpp  test_cli.cs  test_config.ini  test_defs.lua  test_devmgr.cpp  test_devmgr.cs  test_exec.cpp  test_exec.cs  test_interop.cs  test_misc.cs  (+3 more)
test_XXX/: NebuluaTest.sln
test_code/: host_api.lua  run_lua_test.cmd  run_test_lua.cmd  script1.lua  test_bar_time.lua  test_defs.lua  test_nebcommon.cpp  test_nebulua.lua
vs/: Nebulua.cpp  Nebulua.vcxproj
(+86 files in other folders)
